dev/platform/rollouts/demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rollouts-demo
  namespace: cloudops-dev
  labels:
    app: rollouts-demo
    env: dev
    app.kubernetes.io/name: rollouts-demo
    app.kubernetes.io/part-of: cloudops
    app.kubernetes.io/managed-by: argocd
spec:
  type: ClusterIP
  selector:
    app: rollouts-demo
  ports:
    - name: http
      port: 80
      targetPort: 8080
